@@ -26,6 +26,7 @@
 - Add `main` function to handle command line arguments.
 - Add some VarAction2 variables for houses.
 - Add `TTDString` constants.
+- Add `TownGrowthEffect` constants.
 - Support using StringRef in Action 0x14 (`SetProperties`).
 - Support using StringRef as `NewGRF` `name` and `description`.
 - Support encoding of industry layouts.
